# Food-Delivery-Time-Prediction

./: .gitignore  README.md  main.py  pyproject.toml
.dvc/: config
data/: deliverytime.csv.dvc
notebooks/: food_delivery_demo.ipynb
src/food_delivery_time/: data.py  model.py
src/food_delivery_time_prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
