[project]
name = "food-delivery-time-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keras>=3.12.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
]

[dependency-groups]
dev = [
    "dvc[gdrive]>=3.64.0",
    "isort>=7.0.0",
    "jupyterlab>=4.5.0",
    "pre-commit>=4.5.0",
]

[tool.setuptools]
packages.find.where = ["src"]
